Matrix.Deploy/Kubernetes/pod.registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix_registry
  labels:
    app: matrix_registry
  spec:
    replicas: 1
    matchLabels:
      app: matrix_registry
    template:
      metadata:
        labels:
          app: matrix_registry
      spec:
        containers:
          - name: matrix_registry
            image: parameshg/matrix.registry:latest
            ports:
              - containerPort: 80
