Matrix.Deploy/Kubernetes/svc.configurator.yml
apiVersion: v1
kind: Service
metadata:
  name: matrix_configurator
spec:
  selector:
    app: matrix_configurator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
