Matrix.Deploy/Kubernetes/svc.directory.yml
apiVersion: v1
kind: Service
metadata:
  name: matrix_directory
spec:
  selector:
    app: matrix_directory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
