Matrix.Deploy/Kubernetes/svc.journal.yml
apiVersion: v1
kind: Service
metadata:
  name: matrix_journal
spec:
  selector:
    app: matrix_journal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
