Matrix.Deploy/Kubernetes/svc.platform.mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: platform_mongodb
spec:
  selector:
    app: platform_mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
