Matrix.Deploy/Kubernetes/svc.postman.yml
apiVersion: v1
kind: Service
metadata:
  name: matrix_postman
spec:
  selector:
    app: matrix_postman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
