Matrix.Deploy/Kubernetes/svc.web.yml
apiVersion: v1
kind: Service
metadata:
  name: matrix_web
spec:
  selector:
    app: matrix_web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
